# pve-hardware-metrics

./: .gitignore  .gitlint  .pre-commit-config.yaml  LICENSE  Makefile  README.md  gitlint_rules.py  pyproject.toml
.github/workflows/: test.yml
src/: pve_hardware_metrics.py
tests/: __init__.py  test_pve_hardware_metrics.py
