[project]
name = "pve-hardware-metrics"
version = "0.0.1"
description = "This Python script collects hardware data from a Proxmox host and reports the metrics to an InfluxDB instance. The script gathers information from various sources, including system sensors, NVMe and SATA devices, and disk usage for running virtual machines (VMs)."
authors = [{ name = "Jimmy Pells" }]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "influxdb-client>=1.48.0",
]

[dependency-groups]
dev = [
    "pre-commit>=2.20.0",
    "ruff>=0.9.2",
    "mypy>=0.991",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-randomly>=3.16.0",
    "pytest-xdist>=3.6.1",
    "gitlint>=0.19.1",
]

[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[tool.mypy]
files = ["src", "tests"]
disallow_untyped_defs = true
disallow_any_unimported = true
no_implicit_optional = true
check_untyped_defs = true
show_error_codes = true
warn_return_any = true
warn_unused_ignores = true
warn_unused_configs = true
warn_unreachable = true
warn_redundant_casts = true
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q --randomly-seed=42 --dist=loadscope --numprocesses=auto"

[tool.ruff]
target-version = "py311"
fix = true

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203",
    "D213",
    "COM812",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.coverage.report]
fail_under = 100
show_missing = true
skip_empty = true
skip_covered = true

[tool.coverage.run]
branch = true
source = ["src", "tests"]
concurrency = ["multiprocessing"]
